Update calculator solution for second draft

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <!-- 
   # HTML 
   # Create calculator elements
-  # Title, Tagline & Output
-  # Create buttons
+  #   - Title
+  #   - Output
+  #   - Buttons
 -->
 <html lang="en">
   <head>
@@ -22,7 +23,7 @@
 <body>
   <content>
     <div class="calculator_body">
-      <div class="calculator_title">Electronic Calculator</div>
+      <div class="calculator_title">Calculator</div>
       <output value = "0" id="calculator_output" class="calculator_output"></output>
       <div class="calculator_keys">   
         <button value="AC" class="calc-button add_red" onclick="calculate(this.value)">AC</button>
